--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.1",
     "react-scripts": "^5.0.1",
-    "rimraf": "^6.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -37,5 +36,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@rollup/plugin-terser": "^0.4.4",
+    "glob": "^9.3.5",
+    "rimraf": "^4.4.1"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
